<?xml version="1.0"?>
<package format="3">
  <name>hsr_joint_state_2_joint_trajectory</name>
  <version>2.0.0</version>
  <description>The hsr_joint_state_2_joint_trajectory package</description>
  <maintainer email="inamura.laboratory@gmail.com">inamura laboratory</maintainer>
  <license>SIGVerse License</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>rclcpp</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>trajectory_msgs</build_depend>
  <build_depend>tf2_geometry_msgs</build_depend>

  <exec_depend>rclcpp</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>trajectory_msgs</exec_depend>
  <exec_depend>tf2_geometry_msgs</exec_depend>
  <exec_depend>ros2launch</exec_depend>
  <exec_depend>xacro</exec_depend>
  <exec_depend>joint_state_publisher_gui</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>hsrb_description</exec_depend>
  <exec_depend>hsrb_meshes</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>rosbridge_server</exec_depend>
  <exec_depend>sigverse_ros_bridge</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>
