<?xml version="1.0"?>
<package format="3">
  <name>sigverse_turtlebot3_manipulation_description</name>
  <version>0.1.0</version>
  <description>TurtlebBt3 manipulation description for SIGVerse</description>
  <maintainer email="inamura.laboratory@gmail.com">inamura laboratory</maintainer>
  <license>SIGVerse License</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <exec_depend>xacro</exec_depend>
  <exec_depend>turtlebot3_manipulation_description</exec_depend>
  <exec_depend>sigverse_turtlebot3_manipulation_hardware</exec_depend>
  
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
