<?xml version="1.0"?>
<package format="3">
  <name>sigverse_turtlebot3_manipulation_hardware</name>
  <version>0.1.0</version>
  <description>TurtleBot3 hardware interface for SIGVerse</description>
  <maintainer email="inamura.laboratory@gmail.com">inamura laboratory</maintainer>
  <license>SIGVerse License</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>hardware_interface</depend>
  <depend>pluginlib</depend>
  <depend>rclcpp</depend>
  <depend>realtime_tools</depend>
  
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
